--- a/views/main/index.jade
+++ b/views/main/index.jade
@@ -2,6 +2,6 @@ extends ../template/main.jade
 
 block content
   #navsidebar.col-sm-3.col-md-2.sidebar
-    include ./projlist.jade
+    //include ./projlist.jade
   #mainworkspace.col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
     h1 xixi
