--- a/views/template/main.jade
+++ b/views/template/main.jade
@@ -1,75 +1,21 @@
-doctype html
-html(lang='zh-CN')
-  head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    // 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！
-    meta(name='description', content='')
-    meta(name='author', content='')
-    link(rel='icon', href='favicon.ico')
-    title #{title}
-    // Bootstrap core CSS
-    link(href='bootstrap.min.css', rel='stylesheet')
-    // Custom styles for this template
-    link(href='dashboard/dashboard.css', rel='stylesheet')
-    link(href='jqtree.css', rel='stylesheet')
-    // Just for debugging purposes. Don't actually copy these 2 lines!
-    //if lt IE 9
-      script(src='dashboard/assets/js/ie8-responsive-file-warning.js')
-    script(src='dashboard/assets/js/ie-emulation-modes-warning.js')
-    // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
-    //if lt IE 9
-      script(src='http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js')
-      script(src='http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js')
-    style(type='text/css').
-      #clientnumsChart {
-        height: 100px; width: 100%; border: 1px solid black;
-      }
-      #heaptotalChart {
-        height: 100px; width: 100%; border: 1px solid black;
-      }
-      #heapusedChart {
-        height: 100px; width: 100%; border: 1px solid black;
-      }
-      #totalclientnumsChart {
-        height: 100px; width: 100%; border: 1px solid black;
-      }
-  body
-    nav.navbar.navbar-inverse.navbar-fixed-top
-      .container-fluid
-        .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='/') #{title}
-        #navbar.navbar-collapse.collapse
-          ul.nav.navbar-nav.navbar-right
-            li
-              a(href='/setting') 设置
-            li
-              a(href='/help') 帮助
+extends ../template/basehtml.jade
+
+block bodycontent
+  nav.navbar.navbar-inverse.navbar-fixed-top
     .container-fluid
-      .row
-        block content
-        //#navsidebar.col-sm-3.col-md-2.sidebar
-          //include inc/nsb_main.jade
-        //#mwpnav.col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
-        //  include inc/mwsnav_default.jade
-        //#mainworkspace.col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
-          //include workspace/main.jade
-    //
-      Bootstrap core JavaScript
-      ==================================================
-    // Placed at the end of the document so the pages load faster
-    script(src='jquery.min.js')
-    script(src='tree.jquery.js')
-    script(src='bootstrap.min.js')
-    script(src='Chart.js')
-    // Just to make our placeholder images work. Don't actually copy the next line!
-    script(src='dashboard/assets/js/vendor/holder.min.js')
-    // IE10 viewport hack for Surface/desktop Windows 8 bug
-    script(src='dashboard/assets/js/ie10-viewport-bug-workaround.js')
-    script(src='js/ajaxclient.js')
+      .navbar-header
+        button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='/') #{title}
+      #navbar.navbar-collapse.collapse
+        ul.nav.navbar-nav.navbar-right
+          li
+            a(href='/setting') 设置
+          li
+            a(href='/help') 帮助
+  .container-fluid
+    .row
+      block maincontent
