--- a/views/newproj/index.jade
+++ b/views/newproj/index.jade
@@ -4,4 +4,4 @@ block maincontent
   #navsidebar.col-sm-3.col-md-2.sidebar
     include ../template/lmproj.jade
   #mainworkspace.col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
-    h1 新建项目
+    include newproj.jade
